--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,16 @@ tasks.withType(JavaCompile) {
 
 dependencies {
     compileOnly('jakarta.platform:jakarta.jakartaee-web-api:9.1.0')
-    implementation('org.glassfish.jersey.containers:jersey-container-servlet:3.0.4')
-    implementation('org.glassfish.jersey.media:jersey-media-json-jackson:3.0.4')
-    implementation('org.glassfish.jersey.inject:jersey-cdi2-se:3.0.4')
+    implementation('org.glassfish.jersey.containers:jersey-container-servlet:3.1.3')
+    implementation('org.glassfish.jersey.media:jersey-media-json-jackson:3.1.3')
+    implementation('org.glassfish.jersey.inject:jersey-cdi2-se:3.1.3')
     implementation('org.jboss.weld.se:weld-se-core:4.0.3.Final')
+
+    // EclipseLink JPA
+    implementation group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.7.7'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.2.0'
+    // https://mvnrepository.com/artifact/joda-time/joda-time
+    implementation 'joda-time:joda-time:2.12.5'
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
