--- a/build.gradle
+++ b/build.gradle
@@ -23,16 +23,30 @@ tasks.withType(JavaCompile) {
 
 dependencies {
     compileOnly('jakarta.platform:jakarta.jakartaee-web-api:9.1.0')
+    implementation 'org.projectlombok:lombok:1.18.28'
+    //for access DB
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.2.0'
+    // https://mvnrepository.com/artifact/org.hibernate/hibernate-core
+    implementation 'org.hibernate:hibernate-core:6.3.0.Final'
+
+    //for logging
+    implementation 'org.slf4j:slf4j-api:2.0.9'
+    implementation 'org.slf4j:slf4j-simple:2.0.9'
+    //for REST API
     implementation('org.glassfish.jersey.containers:jersey-container-servlet:3.1.3')
     implementation('org.glassfish.jersey.media:jersey-media-json-jackson:3.1.3')
     implementation('org.glassfish.jersey.inject:jersey-cdi2-se:3.1.3')
     implementation('org.jboss.weld.se:weld-se-core:4.0.3.Final')
 
-    // EclipseLink JPA
-    implementation group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.7.7'
-    implementation 'org.mariadb.jdbc:mariadb-java-client:3.2.0'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
     // https://mvnrepository.com/artifact/joda-time/joda-time
     implementation 'joda-time:joda-time:2.12.5'
+
+
+
+
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
